unpackaged/main/default/objects/Quote/fields/Number_of_Quote_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quote_Line_Items__c</fullName>
    <label>Number of Quote Line Items</label>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>