unpackaged/main/default/objects/Quote/fields/Quote_PDF_sent__c.field-meta.xml
<CustomField>
    <fullName>Quote_PDF_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote PDF sent</label>
    <type>Checkbox</type>
</CustomField>