unpackaged/main/default/objects/Quote/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <defaultValue>&quot;Monthly rolling contract, terminable on 30 days&#39; notice by either party in accordance with the T&amp;Cs&quot;</defaultValue>
    <label>Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>