unpackaged/main/default/objects/Quote/validationRules/Ensure_Line_Items_when_Presented.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Line_Items_when_Presented</fullName>
    <active>true</active>
    <description>Quote Line Items should be added prior to Presented status</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL( Status , &#39;Presented&#39;),
LineItemCount = 0,
CreatedDate &gt;= DATETIMEVALUE(&quot;2022-09-20 12:00:00&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please add quote line items. When Quote is moved to Presented it is automatically synced with the Opportunity.</errorMessage>
</ValidationRule>